# globals

./: .gitignore  BUILD  CMakeLists.txt  CPPLINT.cfg  MODULE.bazel  Makefile  README.md  globals.cc  globals.h  globals_test.cc  globlist.h  globlist_empty.h  globlist_example.h  main.cc  params.txt  simple_test.cc
.github/workflows/: test.yml
test/: globals_test  globals_test.cc  globlist.h
